# stationreappropriation

./: CLAUDE.md  README.md  pyproject.toml
src/stationreappropriation/: marimo_utils.py  utils.py
src/stationreappropriation/experimentations/: analyse_charge.py  consosandboc.py  demo.py  equilibrage.py  facturation.py  marges.py  periodes.py  plages_hphc.py  refacturation_turpe.py  resiliation.py  tarifs.py  taxes.py  test_electricore.py  turpesandbox.py
src/stationreappropriation/interfaces/: M023.py  consosandboc.py  demo.py  equilibrage.py  export_parquet.py  facturation.py  facturation_electricore.py  marges.py  refacturation.py  refacturation_electricore.py  refacturation_turpe.py  taxes.py  taxes_electricore.py  test_electricore.py  turpesandbox.py
src/stationreappropriation/moteur_metier/: consos.py  formattage.py  services.py  turpe.py  turpe_rules.csv
src/stationreappropriation/odoo/: services.py
